Fix gradient display on safari

--- a/angular/core/components/dialog_scroll_indicator/dialog_scroll_indicator.scss
+++ b/angular/core/components/dialog_scroll_indicator/dialog_scroll_indicator.scss
@@ -9,6 +9,6 @@
   bottom: 48px;
   height: 48px;
   padding: 4px;
-  background: linear-gradient(0deg, $card-background-color, transparent);
+  background: linear-gradient(0deg, rgba(255,255,255,1), rgba(255,255,255,0));
   color: $grey-on-white;
 }
